@@ -1,8 +1,9 @@
 CHANGELOG
 =========
 
-MyKnowledgeBase version 3.1 - february 2016
+MyKnowledgeBase version 3.2 - february 2016
 - file header: the search bar in header is for posts only
+- theme customizer: change search bar title
 - file search: post nav inside the loop
 - file style: fixed alignment of next and prev post link
 - several small adjustments
